@@ -650,7 +650,7 @@ Voulez-vous l&apos;écraser ?</translation>
     <message>
         <location filename="../basegui.cpp" line="980"/>
         <source>&amp;Default</source>
-        <translation>&amp;Défaut</translation>
+        <translation type="obsolete">&amp;Défaut</translation>
     </message>
     <message>
         <location filename="../basegui.cpp" line="985"/>
