@@ -525,7 +525,7 @@ Do you want to overwrite?</source>
     <message>
         <location filename="../basegui.cpp" line="980"/>
         <source>&amp;Default</source>
-        <translation>&amp;За умовчанням</translation>
+        <translation type="obsolete">&amp;За умовчанням</translation>
     </message>
     <message>
         <location filename="../basegui.cpp" line="985"/>
